Classes adaptadas para compilar no Java 1.3